# serializer version: 1
# name: test_setup[switch.mock_classicvario-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.mock_classicvario',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'eheimdigital',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'filter_active',
    'unique_id': '00:00:00:00:00:03',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[switch.mock_classicvario-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock classicVARIO',
    }),
    'context': <ANY>,
    'entity_id': 'switch.mock_classicvario',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_setup[switch.mock_filter-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.mock_filter',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'eheimdigital',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'filter_active',
    'unique_id': '00:00:00:00:00:04',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[switch.mock_filter-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock filter',
    }),
    'context': <ANY>,
    'entity_id': 'switch.mock_filter',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_setup[switch.mock_reeflex-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.mock_reeflex',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'eheimdigital',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '00:00:00:00:00:05_active',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[switch.mock_reeflex-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock reeflex',
    }),
    'context': <ANY>,
    'entity_id': 'switch.mock_reeflex',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[switch.mock_reeflex_booster-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.mock_reeflex_booster',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Booster',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Booster',
    'platform': 'eheimdigital',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'booster',
    'unique_id': '00:00:00:00:00:05_booster',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[switch.mock_reeflex_booster-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock reeflex Booster',
    }),
    'context': <ANY>,
    'entity_id': 'switch.mock_reeflex_booster',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[switch.mock_reeflex_expert_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.mock_reeflex_expert_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Expert mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Expert mode',
    'platform': 'eheimdigital',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'expert',
    'unique_id': '00:00:00:00:00:05_expert',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[switch.mock_reeflex_expert_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock reeflex Expert mode',
    }),
    'context': <ANY>,
    'entity_id': 'switch.mock_reeflex_expert_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[switch.mock_reeflex_pause-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.mock_reeflex_pause',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Pause',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Pause',
    'platform': 'eheimdigital',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'pause',
    'unique_id': '00:00:00:00:00:05_pause',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[switch.mock_reeflex_pause-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock reeflex Pause',
    }),
    'context': <ANY>,
    'entity_id': 'switch.mock_reeflex_pause',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
